--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Letter-Looper</title>
-    <script src="looper.js"></script>
+    <script src="js/looper.js"></script>
 </head>
 <body>
     
